# smit

./: .gitignore  CHANGES  COPYING  LICENSE  Makefile  Makefile.am  Makefile.in  Procfile  README-merge.txt  README-mingw.txt  README.md  TODO-v4.txt  _config.yml  about.html  about.md  aclocal.m4  api.html  api.md  configure  configure.ac  developers.html  developers.md  documentation.html  documentation.md  downloads.html  downloads.md  footer.html  gen_menu.sh  getting_started.html  getting_started.md  header.html  index.html  index.md  issue_tracking.html  issue_tracking.md  news.html  news.md  notes-rest-api.txt  notes.txt  screenshots.html  (+4 more)
_layouts/: default.html
data/githooks/: post-receive  update
data/public/: issue.html  issues.html  issuesAccross.html  newIssue.html  print.css  project.html  project.js  projects.html  signin.html  smit.js  style.css  user.html  user.js  view.html  view.js  views.html
data/public/.templates/: entries.html  header.html  header_fixed.html  header_global_menu.html  header_no_project.html  print_preview.js  project.html  projects.html  user.html  users.html  view.html  views.html
data/sm/: smit.js
data/templates/: entries.html  header.html  header_global_menu.html  header_no_project_fixed.html  issue.html  issues.html  issuesAccross.html  newIssue.html  project.html  projects.html  stat.html  user.html  users.html  view.html  views.html
demo/: users
demo-v3/.smit/templates/: entries.html  global-bar.html  header.html  header_no_project.html  issue.html  issues.html  issuesAccross.html  newIssue.html  project.html  projects.html  (+6 more)
demo-v3/public/: ajax.js  issues.html  issuesAccross.html  newIssue.html  project.html  projects.html  stat.html  style.css  user.html  users.html  view.html  views.html
demo/myproject/: views
demo/public/: global_header.html  issue.html  issues.html  issuesAccross.html  newIssue.html  pconfig.html  pconfig.js  print.css  project.html  project.js  project_config.html  projects.html  signin.html  skel.html  smit.js  style.css  trigger.sh  user.html  user.js  vconfig.js  view.html  view.js  viewConfig.html  views.html
demo/smit/: views
demo/things_to_do/: project  views
dev/: README.txt
doc/: Makefile  admin.html  admin.md  api.html  developers.html  developers.md  header.html  html.html  html.md  index.html  index.md  install.html  install.md  overview.html  overview.md  user_guide.html
doc-v2/: Makefile  admin.html  api.html  api.md  developers.html  documentation.html  header.html  html.html  index.html  index.md  install.html  user_guide.html
doc-v3/: Makefile  admin.html  admin.md  api.html  api.md  cli.md  cloning.html  cloning.md  developers.html  developers.md  experts.html  experts.md  header.html  html.html  html.md  index.html  index.md  install.html  install.md  user_guide.html  user_guide.md  web_user_guide.html  web_user_guide.md
examples/: notifyNewEntry  notifyNewEntry.py
mongoose/: mg_win32.h  mongoose.c  mongoose.h
p/smit/: smit.pro
public/css/: smit.css
repositories/: users
repositories/html/: signin.html  smit.js  style.css
repositories/js/: smit.js
repositories/myproject/: project  users
repositories/public/: project.html  signin.html  smit.js  style.css
scripts/: add_entry  convert_project_v3_to_v4  convert_repo_v3_to_v4  convert_v2_to_v3  convert_v3_to_v4
src/: Args.cpp  Args.h  Auth.h  AuthKrb5.cpp  AuthKrb5.h  AuthLdap.cpp  AuthLdap.h  AuthSha1.cpp  AuthSha1.h  ContextParameters.cpp  ContextParameters.h  Entry.cpp  Entry.h  HttpContext.cpp  HttpContext.h  Issue.cpp  Issue.h  Object.cpp  Object.h  Project.cpp  Project.h  ProjectConfig.cpp  ProjectConfig.h  Tag.cpp  Tag.h  Trigger.cpp  Trigger.h  View.cpp  View.h  authLdap.cpp  authLdap.h  clone.cpp  clone.h  config.h.in  console.cpp  console.h  cpio.cpp  cpio.h  dateTools.cpp  dateTools.h  (+54 more)
src/local/: clone.cpp  clone.h  cmdProject.cpp  cmdProject.h  httpClient.cpp  httpClient.h  localClient.cpp  localClient.h
src/project/: Entry.cpp  Entry.h  Issue.cpp  Issue.h  Object.cpp  Object.h  Project.cpp  Project.h  ProjectConfig.cpp  ProjectConfig.h  Tag.cpp  Tag.h  View.cpp  View.h  gitdb.cpp  gitdb.h
src/rendering/: ContextParameters.cpp  ContextParameters.h  renderingCsv.cpp  renderingCsv.h  renderingHtml.cpp  renderingHtml.h  renderingHtmlIssue.cpp  renderingHtmlIssue.h  renderingHtmlUtil.cpp  renderingHtmlUtil.h  renderingJson.cpp  renderingJson.h  renderingText.cpp  renderingText.h  renderingZip.cpp  renderingZip.h  renderingZipHtml.h
src/repositories/: users.conf
src/repository/: db.cpp  db.h
src/server/: HttpContext.cpp  HttpContext.h  Trigger.cpp  Trigger.h  cgi.cpp  cgi.h  gitconfig.cpp  gitconfig.h  httpdHandlerGit.cpp  httpdHandlerGit.h  httpdHandlers.cpp  httpdHandlers.h  httpdUtils.cpp  httpdUtils.h
src/user/: Auth.h  AuthKrb5.cpp  AuthKrb5.h  AuthLdap.cpp  AuthLdap.h  AuthSha1.cpp  AuthSha1.h  Recipient.h  notification.cpp  notification.h  session.cpp  session.h
src/utils/: RequestContext.h  argv.cpp  argv.h  base64.cpp  base64.h  cgi.cpp  cgi.h  cpio.cpp  cpio.h  dateTools.cpp  filesystem.cpp  filesystem.h  gitTools.cpp  gitTools.h  identifiers.h  jTools.cpp  jTools.h  logging.h  mutexTools.cpp  mutexTools.h  parseConfig.cpp  parseConfig.h  pipe.cpp  pipe.h  stringTools.cpp  stringTools.h  subprocess.cpp  subprocess.h  ustring.h
test/: Makefile  Makefile.am  Makefile.in  T_Args.cpp  T_Args.ref  T_Args.sh  T_clone.ref  T_clone.sh  T_functest.sh  T_get_json.ref  T_get_json.sh  T_gitdb.cpp  T_identifiers.cpp  T_parseConfig.cpp  T_permissions.ref  T_permissions.sh  T_permissions_project.ref  T_permissions_project.sh  T_permissions_repo.ref  T_permissions_repo.sh  T_pipe.cpp  T_project_config.ref  T_project_config.sh  T_pull.ref  T_pull.sh  T_pull_2.ref  T_pull_2.sh  T_pull_3.ref  T_pull_3.sh  T_push.ref  T_push.sh  T_push2.ref  T_push2.sh  T_push3.ref  T_push3.sh  T_push_endurance.ref  T_push_endurance.sh  T_smp_encode_decode.sh  T_smparser  T_smparser1.in  (+18 more)
tools/: convertToC.c  convertToC.cpp
triggers/: MailConfig.py  Readme-triggers.txt  WebConfig.py  notifyNewEntry.py
(+2126 files in other folders)
